--- a/index.html
+++ b/index.html
@@ -4,10 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv='cache-control' content='no-cache'>
+    <meta http-equiv='expires' content='0'>
+    <meta http-equiv='pragma' content='no-cache'>
+    <link rel="stylesheet" href="./style.css">
     <title>800-Straight</title>
 </head>
 <body>
-    <h1>THIS IS MY TEST PAGE</h1>
-    <img src="./gena.png" style="height: 500px; width: 500px;">
+    <div id="maincontainer" class="maincontainer">
+        <div id="logo" class="logo" aria-label="site logo">
+            <img src="/images/8S_notagline.png" id="logoimg" class="logoimg" style="height: 100px; width: 250px;"> 
+            <h4 style="color: red; font-weight: bolder;">Own Your Credit Score</h4>
+        </div>
+    <div id="blockone" class="blockone"></div>
+    <div id="blocktwo" class="blocktwo"></div>
+    <div id="blockthree" class="blockthree"></div>
+    </div> 
 </body>
 </html>
+
+<!--
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+
+-->
