--- a/index.html
+++ b/index.html
@@ -16,11 +16,21 @@
             <img src="/images/8S_notagline.png" id="logoimg" class="logoimg" style="height: 100px; width: 250px;"> 
             <h4 style="color: red; font-weight: bolder;">Own Your Credit Score</h4>
         </div>
-    <div id="blockone" class="blockone"></div>
+        <div id="blockone" class="blockone">
+            <div id="blockimg" class="blockimg">
+            <div id="block1txt" class="block1txt">
+        <p>
+            <h3>Why Repair Credit</h3>
+            <h5>Your credit score comes from your credit report; it is your spending and repayment report card. Credit reports often aren’t correct, and incorrect information can hurt your score. We make sure the your credit report contains correct information so you’ll have the highest score possible.</h5>   
+        </p>
+        <button><a href="./paywindow.html" >Register Here</a></button>
+    </div>
+    </div>
+</div>
     <div id="blocktwo" class="blocktwo"></div>
     <div id="blockthree" class="blockthree"></div>
     </div> 
-</body>
+</body> 
 </html>
 
 <!--
