--- a/index.html
+++ b/index.html
@@ -19,16 +19,37 @@
         <div id="blockone" class="blockone">
             <div id="blockimg" class="blockimg">
             <div id="block1txt" class="block1txt">
-        <p>
-            <h3>Why Repair Credit</h3>
-            <h5>Your credit score comes from your credit report; it is your spending and repayment report card. Credit reports often aren’t correct, and incorrect information can hurt your score. We make sure the your credit report contains correct information so you’ll have the highest score possible.</h5>   
-        </p>
-        <button><a href="./paywindow.html" >Register Here</a></button>
-    </div>
-    </div>
-</div>
-    <div id="blocktwo" class="blocktwo"></div>
-    <div id="blockthree" class="blockthree"></div>
+                <p>
+                    <h3>Why Repair Credit</h3>
+                    <h5>Your credit score comes from your credit report; it is your spending and repayment report card. Credit reports often aren’t correct, and incorrect information can hurt your score. We make sure the your credit report contains correct information so you’ll have the highest score possible.</h5>   
+                </p>
+                <button><a href="./paywindow.html" >Register Here</a></button>
+            </div>
+            </div>
+        </div>
+        <div id="blocktwo" class="blocktwo">
+            <div id="blocktwoimg" class="blocktwoimg">
+            <div id="block2txt" class="block2txt">
+                <p>
+                    <h3>How It Works</h3>
+                    <h5>This webinar includes a brief credit education that includes a high level overview of important legalitities that all borrowers should understand.  We train you on how to read and understand a credit report and FICO score, that includes knowing how transactions, including payments affect your score, the proper way to contact creditors, dispute erroneous data, send documentation back and forth, score boost, and more. </h5>   
+                </p>
+                <button><a href="./paywindow.html" >Register Here</a></button>
+            </div>
+            </div>
+        </div>
+        <div id="blockthree" class="blockthree">
+            <div id="blockthreeimg" class="blockthreeimg">
+            <div id="block3txt" class="block3txt">
+                <p>
+                    <h3>The Credit Impact</h3>
+                    <h5>A low credit score can keep you from the things you want and the places you want to be. But did you know a low credit score can impact a lot more than just financing? Do the best thing you can do for your future. Register today to take our 90-Minute Webinar that will get you on your way to financial freedom.  Let our experience save you time, money, and frustration.</h5>  
+                </p>
+                <button><a href="./paywindow.html" >Register Here</a></button>
+
+            </div>
+            </div>
+        </div>
     </div> 
 </body> 
 </html>
