--- a/paywindow.html
+++ b/paywindow.html
@@ -7,6 +7,7 @@
     <meta http-equiv='cache-control' content='no-cache'>
     <meta http-equiv='expires' content='0'>
     <meta http-equiv='pragma' content='no-cache'>
+    <link rel="icon" href="/images/800_notagline.png">
     <link rel="stylesheet" href="./style.css">
     <title>Payment</title>
 </head>
