--- a/paywindow.html
+++ b/paywindow.html
@@ -13,7 +13,17 @@
 </head>
 <body>
     <div id="paypageContainer" class="mainpageContainer">
-        <div id="paypagedescription" class="paypagedescription"></div>
+        <div id="paypagedescription" class="paypagedescription">
+          <img src="./images/8S_taglinein.png" style="width: 180px; height:100px" alt="800-Straight Logo"><br>
+          <span style="color: #d40000; font-weight: 1000;  ">_______________________</span>
+          <p style="color: #f11111; align-items: center; font-family:sans-serif; font-weight: bolder; width: auto;">Registration for 
+            800-Straight<br>
+            Webinar</p>
+            <h1 style="color: #f11111; font-size: 40px;
+            ">$24.99</h1>
+            <p>Please complete this form to register for the 800-Straight Webinar.  You will also receive email updates, newsletters and more about credit repair.</p><br>
+            <img src="./images/7.png" style=" width: 350px; height: 350px;" alt="credit photo">
+        </div>
         <div id="smart-button-container">
             <div style="text-align: center;">
               <div id="paypal-button-container"></div>
