--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <h5>Credit is used to allow a lender to determine your risk level when considering deferred payment options.  Credit allows you to get money upfront with the promise to repay it in the future, often with interest. Creditworthiness refers to a borrower's ability to pay what they've borrowed. Lenders judge creditworthiness in many different ways, and they may use things like credit reports and credit scores to help. <br><br>When you use credit, it usually means using a credit card. It also might mean that you get a loan. A loan is another way to use credit.  Using credit means you borrow money to buy something.<br><br>&emsp;>You borrow money (with your credit card or loan).<br>&emsp;>You buy the thing you want.<br>&emsp;>You pay back that loan later – with interest.
                         <!--This webinar includes a brief credit education that includes a high level overview of important legalitities that all borrowers should understand.  We train you on how to read and understand a credit report and FICO score, that includes knowing how transactions, including payments affect your score, the proper way to contact creditors, dispute erroneous data, send documentation back and forth, score boost, and more.--> </h5>   
                 </p>
-                <button id="button2"><a href="./signupwindow.html" >Learn More</a></button>
+                <button id="button2"><a href="./shortformReg.html" >Learn More</a></button>
             </div>
             </div>
         </div>
