--- a/shortformReg.html
+++ b/shortformReg.html
@@ -10,8 +10,13 @@
     <link rel="icon" href="/images/800_notagline.png">
     <link rel="stylesheet" href="./style.css">
     <title>800-Straight</title>
+	<style> 
+		body {
+		  background-image: url("./images/newhousebackground.jpg");
+		  background-color: whitesmoke;
+		}
+		</style>
 </head>
-
 <body>
 <div id="parentSignUp">
     <div id="child1HeaderText">MAKE THE BEST DECISION <br>FOR YOU FINANCIAL FUTURE</div>
@@ -26,12 +31,22 @@
 
 
 
+<!--Zoho Campaigns Web-Optin Form's Header Code Starts Here-->
+
+<script type="text/javascript" src="https://kghyb-zcglf.maillist-manage.com/js/optin.min.js" onload="setupSF('sf3zdd15c956a0238260f23f3abf36a5e80847d5f09a47f017c7ee3ba78f02c396e2','ZCFORMVIEW',false,'light',false,'0')"></script>
+<script type="text/javascript">
+	function runOnFormSubmit_sf3zdd15c956a0238260f23f3abf36a5e80847d5f09a47f017c7ee3ba78f02c396e2(th){
+		/*Before submit, if you want to trigger your event, "include your code here"*/
+	};
+</script>
+
+
+
 <!--Zoho Campaigns Web-Optin Form's Header Code Ends Here--><!--Zoho Campaigns Web-Optin Form Starts Here-->
 
 <div id="sf3zdd15c956a0238260f23f3abf36a5e80847d5f09a47f017c7ee3ba78f02c396e2" data-type="signupform" style="opacity: 1;">
-    
 	<div id="customForm">
-        <img id="regLogo" src="./images/800_tagline.png" style="width: 200px; height:auto;" alt="Site Logo" class="responsive">  
+		<img id="regLogo" src="./images/800_tagline.png" style="width: 200px; height:auto;" alt="Site Logo" class="responsive">
 		<div name="SIGNUP_BODY" changeitem="BG_IMAGE" style="text-align: center; width: 300px; position: relative; z-index: 2; background-color: rgb(255, 255, 255); margin: auto; overflow: hidden; height: 367px">
 			<div changeitem="ELEGANTFORM_IMAGE" style="width: 100%; height: 100%; position: absolute; bottom: 0">
 				<img style="width: 100%; height: 100%; position: relative; visibility: hidden">
@@ -54,14 +69,14 @@
 					</div>
 				</div>
 				<form method="POST" id="zcampaignOptinForm" style="margin: 0px; width: 100%; color: rgb(255, 255, 255)" action="https://kghyb-zcglf.maillist-manage.com/weboptin.zc" target="_zcSignup">
-					<div style="background-color: rgb(255, 235, 232); padding: 10px; color: rgb(210, 0, 0); font-size: 11px; border: 1px solid rgb(255, 217, 211); opacity: 1; position: absolute; width: 80%; margin: 20px 10%; box-shadow: rgba(27, 27, 27, 0.31) 0px 4px 7px 3px; z-index: 1; box-sizing: border-box; display: none; display: none" id="errorMsgDiv">Please correct the marked field(s) below.</div>
-					<div style="font-size: 20px; font-family: Arial, sans-serif; font-weight: normal; color: rgb(241, 17, 17); text-align: center; width: 100%; margin: auto">Register with 800-Straight to get more details about our upcoming credit repair webinar. We'll coach you to your best score ever.
+					<div style="background-color: rgb(255, 235, 232); padding: 10px; color: rgb(210, 0, 0); font-size: 11px; border: 1px solid rgb(255, 217, 211); opacity: 1; position: absolute; width: 80%; margin: 20px 10%; box-shadow: rgba(27, 27, 27, 0.31) 0px 4px 7px 3px; z-index: 1; box-sizing: border-box; display: none" id="errorMsgDiv">Please correct the marked field(s) below.</div>
+					<div style="font-size: 20px; font-family: Arial, sans-serif; font-weight: normal; color: rgb(241, 17, 17); text-align: center; width: 100%; margin: auto">Get more details about our upcoming 90-Minute Credit Repair Webinar on <mark>3/7/23 @6pm.</mark> We'll coach you to your best score ever.
 						
 						<br>
 					<br></div>
 					<div style="font-size: 16px; font-family: &quot;Arial&quot;, sans-serif; font-weight: normal; color: rgb(0, 0, 0); text-align: center; width: 100%; margin: auto">$24.99 Limited Time Only!</div>
 					<div style="position: relative; width: 250px; height: 40px; margin: 20px 0 20px; display: inline-block">
-						<input type="text" style="border: 0; outline: none; border-radius: 23px; background-color: rgb(244, 244, 244); width: 100%; height: 100%; color: rgb(136, 136, 136); font-family: &quot;Poppins&quot;, &quot;Arial&quot;, sans-serif; text-align: left; padding: 0 15px; box-sizing: border-box" placeholder="First Name" changeitem="SIGNUP_FORM_FIELD" name="FIRSTNAME" id="FIRSTNAME">
+						<input type="text" style="border: 0; outline: none; border-radius: 23px; background-color: rgb(244, 244, 244); width: 100%; height: 100%; color: rgb(136, 136, 136); font-family: &quot;Poppins&quot;, &quot;Arial&quot;, sans-serif; text-align: left; padding: 0 15px; box-sizing: border-box" placeholder="Full Name" changeitem="SIGNUP_FORM_FIELD" name="FIRSTNAME" id="FIRSTNAME">
 					</div>
 					<div style="text-align: center; width: 250px; height: 40px; margin: auto; margin-bottom: 20px">
 						<div id="Zc_SignupSuccess" style="position: absolute; width: 87%; background-color: white; padding: 3px; border: 3px solid rgb(194, 225, 154); margin-bottom: 10px; word-break: break-all; opacity: 1; display: none">
@@ -75,7 +90,7 @@
 						<input placeholder="Email Address" changeitem="SIGNUP_FORM_FIELD" name="CONTACT_EMAIL" id="EMBED_FORM_EMAIL_LABEL" type="text" style="border: 0; outline: none; border-radius: 23px; background-color: rgb(244, 244, 244); width: 100%; height: 100%; color: rgb(136, 136, 136); font-family: &quot;Poppins&quot;, &quot;Arial&quot;, sans-serif; text-align: left; padding: 0 20px; box-sizing: border-box">
 					</div>
 					<div style="text-align: center; position: relative; width: 116px; height: 42px; display: inline-block">
-						<input type="button" style="text-align: center; width: 100%; height: 100%; border-radius: 50px; border: 0px; cursor: pointer; outline: none; font-size: 14px; font-weight: bold; font-family: Poppins, Arial, sans-serif; text-transform: uppercase; color: rgb(255, 255, 255); background-color: rgb(241, 17, 17)" name="SIGNUP_SUBMIT_BUTTON" id="zcWebOptin" value="Sign Up">
+						<input type="button" style="text-align: center; width: 100%; height: 100%; border-radius: 50px; border: 0px; cursor: pointer; outline: none; font-size: 14px; font-weight: bold; font-family: Poppins, Arial, sans-serif; text-transform: uppercase; color: rgb(255, 255, 255); background-color: rgb(241, 17, 17)" name="SIGNUP_SUBMIT_BUTTON" id="zcWebOptin" value="More Info">
 					</div>
 					<input type="hidden" id="fieldBorder" value="">
 					<input type="hidden" id="submitType" name="submitType" value="optinCustomView">
@@ -112,8 +127,4 @@
 	<div id="zcOptinSuccessPanel"></div>
 </div>
 
-<!--Zoho Campaigns Web-Optin Form Ends Here--></div>
-
-</div>
-</body>
-</html>
+<!--Zoho Campaigns Web-Optin Form Ends Here-->
