--- a/shortformReg.html
+++ b/shortformReg.html
@@ -40,7 +40,7 @@
 
 <div id="sf3zdd15c956a0238260f23f3abf36a5e80847d5f09a47f017c7ee3ba78f02c396e2" data-type="signupform" style="opacity: 1;">
 	<div id="customForm">
-		<img id="regLogo" src="./images/800_tagline.png" style="width: 200px; height:auto;" alt="Site Logo" class="responsive">
+		<img id="regLogo" src="./images/800_tagline.png" style="width: 200px; height:auto; padding-bottom: 10px; padding-top: -10px;" alt="Site Logo" class="responsive">
 		<div name="SIGNUP_BODY" changeitem="BG_IMAGE" style="text-align: center; width: 300px; position: relative; z-index: 2; background-color: rgb(255, 255, 255); margin: auto; overflow: hidden; height: 367px">
 			<div changeitem="ELEGANTFORM_IMAGE" style="width: 100%; height: 100%; position: absolute; bottom: 0">
 				<img style="width: 100%; height: 100%; position: relative; visibility: hidden">
