--- a/index.html
+++ b/index.html
@@ -9,52 +9,45 @@
     <meta http-equiv='pragma' content='no-cache'>
     <link rel="icon" href="/images/800_notagline.png">
     <link rel="stylesheet" href="./style.css">
+    <script src="./index.js"></script>
     <title>800-Straight</title>
 </head>
 <body>
-    <div id="maincontainer" class="maincontainer">
-        <div id="logo" class="logo" aria-label="site logo">
-            <img src="/images/8S_notagline.png" id="logoimg" class="logoimg" style="height: 100px; width: 250px;"> 
-            <h4 id="logoSlogan" style="color: red; font-weight: bolder;">Own Your Credit Score</h4>
-        </div>
-        <div id="blockone" class="blockone">
-            <div id="blockimg" class="blockimg">
-            <div id="block1txt" class="block1txt">
-                <p>
-                    <h3>Why Repair Your Credit?</h3>
-                    <h5>Credit is the #1 medium of exchange in large scale purchases.  If you want to own that beautiful new home but you don't have cash on hand, chances are you are going to need a good credit score to qualify you for the purchase. Your credit score comes from your credit report; it is your spending and repayment report card.  It shares with lender's and merchants your financial acuity, your ability to pay what you borrow. <br><br>Credit reports often aren’t correct, and incorrect information can hurt your score. We want to make sure that you understand your credit report and the information it contains.  We want to equip you with the knowledge to dispute and correct information so you’ll have the highest score possible.</h5>   
-                </p>
-                <button id="button1"><a href="./paywindow.html" >Register Here</a></button>
-            </div>
-            </div>
-        </div>
-        <div id="blocktwo" class="blocktwo">
-            <div id="blocktwoimg" class="blocktwoimg">
-            <div id="block2txt" class="block2txt">
-                <p>
-                    <h3>How It Works</h3>
-                    <h5>Credit is used to allow a lender to determine your risk level when considering deferred payment options.  Credit allows you to get money upfront with the promise to repay it in the future, often with interest. Creditworthiness refers to a borrower's ability to pay what they've borrowed. Lenders judge creditworthiness in many different ways, and they may use things like credit reports and credit scores to help. <br><br>When you use credit, it usually means using a credit card. It also might mean that you get a loan. A loan is another way to use credit.  Using credit means you borrow money to buy something.<br><br>&emsp;>You borrow money (with your credit card or loan).<br>&emsp;>You buy the thing you want.<br>&emsp;>You pay back that loan later – with interest.
-                        <!--This webinar includes a brief credit education that includes a high level overview of important legalitities that all borrowers should understand.  We train you on how to read and understand a credit report and FICO score, that includes knowing how transactions, including payments affect your score, the proper way to contact creditors, dispute erroneous data, send documentation back and forth, score boost, and more.--> </h5>   
-                </p>
-                <button id="button2"><a href="./shortformReg.html" >Learn More</a></button>
-            </div>
-            </div>
-        </div>
-        <div id="blockthree" class="blockthree">
-            <div id="blockthreeimg" class="blockthreeimg">
-            <div id="block3txt" class="block3txt">
-                <p>
-                    <h3>The Credit Impact</h3>
-                    <h5>A low credit score can keep you from the things you want and the places you want to be. But did you know a low credit score can impact a lot more than just financing?<br><br> Do the best thing you can do for your future. Register today to take our 90-Minute Webinar that will get you on your way to financial freedom.  Let our experience save you time, money, and frustration.</h5>  
-                </p>
-                <button id="button3"><a href="./paywindow.html" >Register Here</a></button>
-
-            </div>
-            </div>
-        </div>
-    </div> 
-    <footer id="footer">
-        800-Straight<br>All Rights Reserved&copy2023
-    </footer>
-</body> 
+    <div id="logoMain">
+        <img src="/images/8S_notagline.png" id="logoimg" class="logoimg" style="height: 100px; width: 250px;"> 
+        <h4 id="logoSlogan" style="color: red; font-weight: bolder;">Own Your Credit Score</h4>
+    </div>
+<div style="background-color: black; padding-top: .5%;">
+<div id="registration1">
+        <img src="./images/blockonecolorREV.png" alt="New House" class="responsive" width="100%">
+    <p>
+        <h5>Credit is the #1 medium of exchange in large scale purchases.  If you want to own that beautiful new home but you don't have cash on hand, chances are you are going to need a good credit score to qualify you for the purchase. Your credit score comes from your credit report; it is your spending and repayment report card.  It shares with lender's and merchants your financial acuity, your ability to pay what you borrow. <br><br>Credit reports often aren’t correct, and incorrect information can hurt your score. We want to make sure that you understand your credit report and the information it contains.  We want to equip you with the knowledge to dispute and correct information so you’ll have the highest score possible.</h5>   
+    </p>
+    <button id="button1" class="button"><a href="./paywindow.html" >Register Here</a></button>
+</div>
+</div>
+<div style="background-color: black; padding-top: .5%;">
+<div id="registration2">
+    <img src="./images/blocktwocolorREV.png" alt="New House" class="responsive" width="100%">
+    <p>
+        <h5>Credit is used to allow a lender to determine your risk level when considering deferred payment options.  Credit allows you to get money upfront with the promise to repay it in the future, often with interest. Creditworthiness refers to a borrower's ability to pay what they've borrowed. Lenders judge creditworthiness in many different ways, and they may use things like credit reports and credit scores to help. <br><br>When you use credit, it usually means using a credit card. It also might mean that you get a loan. A loan is another way to use credit.  Using credit means you borrow money to buy something.<br><br>&emsp;>You borrow money (with your credit card or loan).<br>&emsp;>You buy the thing you want.<br>&emsp;>You pay back that loan later – with interest.
+            <!--This webinar includes a brief credit education that includes a high level overview of important legalitities that all borrowers should understand.  We train you on how to read and understand a credit report and FICO score, that includes knowing how transactions, including payments affect your score, the proper way to contact creditors, dispute erroneous data, send documentation back and forth, score boost, and more.--> </h5>   
+    </p>
+    <button id="button2" class="button"><a href="./shortformReg.html" >Learn More</a></button>
+</div>
+</div>
+<div style="background-color: black; padding-top: .5%;">
+<div id="registration3">
+    <img src="./images/blockthreecolorREV.png" alt="New House" class="responsive" width="100%">
+    <p>
+        <h5>A low credit score can keep you from the things you want and the places you want to be. But did you know a low credit score can impact a lot more than just financing?<br><br> Do the best thing you can do for your future. Register today to take our 90-Minute Webinar that will get you on your way to financial freedom.  Let our experience save you time, money, and frustration.</h5>  
+    </p>
+    <button id="button3" class="button"><a href="./paywindow.html" >Register Here</a></button>
+</div>
+</div>
+</div>
+<footer id="footer">
+    800-Straight<br>All Rights Reserved&copy2023
+</footer>
+</body>
 </html>
