--- a/paywindow.html
+++ b/paywindow.html
@@ -12,18 +12,15 @@
     <title>Payment</title>
 </head>
 <body>
-    <div id="paypageContainer" class="mainpageContainer">
-        <div id="paypagedescription" class="paypagedescription">
-          <img src="./images/8S_taglinein.png" style="width: 180px; height:100px" alt="800-Straight Logo"><br>
+      <div id="paypagedescription" class="paypagedescription">
+          <img id="logoimg" src="./images/8S_taglinein.png" style="width: 180px; height:100px" alt="800-Straight Logo"><br>
           <span style="color: #d40000; font-weight: 1000;  ">_______________________</span>
           <p style="color: red; align-items: center; font-family:sans-serif; font-weight: bolder; width: auto;">Registration for 
             800-Straight <BR>Credit Repair Webinar<br><span style="color: rgb(34, 183, 34);">3/7/23 @ 6pm</span></p>
             <h1 style="color: red; font-size: 40px;
             ">$24.99</h1>
             <p style="color: black;">Please complete this form to register for the 800-Straight Credit Repair Webinar.  You will also receive email updates, newsletters and more about credit repair.</p><br>
-            <img src="./images/7.png" style=" width: 350px; height: 350px;" alt="credit photo">
         </div>
-
         <!--PAYPAL BUTTON-->
 
         <div id="smart-button-container">
