--- a/paywindow.html
+++ b/paywindow.html
@@ -19,7 +19,7 @@
             800-Straight <BR>Credit Repair Webinar<br><span style="color: rgb(34, 183, 34);">9/5/23 @ 6pm</span></p>
             <h1 style="color: red; font-size: 40px;
             ">$24.99</h1>
-            <p style="color: black;">Please complete this form to register for the 800-Straight Credit Repair Webinar.  You will also receive email updates, newsletters and more about credit repair.</p><br>
+            <p style="color: black;">Please complete the payment form to register for the 800-Straight Credit Repair Webinar.  You will also receive email updates, newsletters and more about credit repair.</p><br>
         </div>
         <!--PAYPAL BUTTON-->
 
